dataset1235/2025-2/2868285114/users/214715729/executions/3792430146_4093783519.log
== SUBMISSION (2025-09-03 03:36:22)
-- CODE: 
numero = int(input())
if numero % 2 == 0:
  print("sim")
else:
  print("nao")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
---- user output:
nao
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
---- user output:
nao
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
---- user output:
nao
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
---- user output:
sim
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
---- user output:
sim
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-03 03:30:26)
-- CODE: 
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "sim"
else
	mensagem = "nao"

print(mensagem.upper())
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
842
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
11
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
55
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
3
---- correct output:
nao
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
648
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
22
---- correct output:
sim
-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                     ^
SyntaxError: expected ':'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
